<resources>
    <string name="app_name">MovR</string>
    <string name="recent">Recent</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>
    <string name="cycle">Cycle</string>
    <string name="list_item_sample">4.8km for 1hr 22mins</string>
    <string name="add_annotation">Add annotation</string>
    <string name="list_item_time_sample">12:23pm</string>
    <string name="list_item_date_sample">27/11/2023</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="stats">Stats</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="activity_type_placeholder">Activity type: Walk</string>
    <string name="a_person_walking">A person walking</string>
    <string name="a_person_running">A person running</string>
    <string name="a_person_cycling">A person cycling</string>
    <string name="time">Time</string>
    <string name="time_placeholder">0:00</string>
    <string name="distance">Distance</string>
    <string name="distance_placeholder">0.00 km</string>
    <string name="clear_recent">Clear recent</string>
    <string name="activity_type">"Activity type: "</string>
    <string name="description">Description</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="total_distance">Total distance</string>
    <string name="total_time">Total time</string>
    <string name="average_distance">Average distance</string>
    <string name="average_time">Average time</string>
    <string name="number_of_location_based_reminders">Number of Location-Based Reminders</string>
    <string name="zero">0</string>
    <string name="number_of_annotations">Number of annotations</string>
    <string name="view_previous_30_days">View previous 30 days</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="thumbs_down">Thumbs down</string>
    <string name="submit">Submit</string>
    <string name="select_image">Select image</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="clear_all_lbrs">Clear all LBRs</string>
</resources>