<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/list_item_linear_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/list_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_time_sample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/list_item_date_sample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/list_item_time"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_item_linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_item_linear_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/walk"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/list_item_distance_and_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_sample"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_annotation_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/list_item_add_annotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_annotation"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item_annotation_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/list_item_annotation_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <ImageView
                android:id="@+id/list_item_annotation_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
